libgfortran/libgfortran.h
@@ -414,6 +414,11 @@ typedef enum
 { SILENT, WARNING, ERROR }
 notification;
 
+/* This is returned by notify_std and several io functions.  */
+typedef enum
+{ SUCCESS = 1, FAILURE }
+try;
+
 /* The filename and line number don't go inside the globals structure.
    They are set by the rest of the program and must be linked to.  */
 
@@ -491,6 +496,9 @@ internal_proto(translate_error);
 
 extern void generate_error (struct st_parameter_common *, int, const char *);
 internal_proto(generate_error);
+
+extern try notify_std (struct st_parameter_common *, int, const char *);
+internal_proto(notify_std);
 
 /* fpu.c */
 
